--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
       
       - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          annotations: ${{ steps.meta.outputs.annotations }}
-          provenance: true
-          sbom: true
+        run: | 
+                docker ${{ secrets.DOCKER_USERNAME }}/grupp2-assigmnet-ci-cd .
+                docker push ${{ secrets.DOCKER_USERNAME }}/grupp2-assigmnet-ci-cd
