--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Run Projekt Gruppuppgift
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
+
 
 jobs:
   build:
@@ -43,6 +44,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
       
       - name: Build and push Docker image
-        run: | 
-                docker ${{ secrets.DOCKER_USERNAME }}/grupp2-assigmnet-ci-cd .
-                docker push ${{ secrets.DOCKER_USERNAME }}/grupp2-assigmnet-ci-cd
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/grupp2-assigmnet-ci-cd:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/grupp2-assigmnet-ci-cd:latest
