--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Run Projekt Gruppuppgift
 on:
   push:
-    branches: [ main ]
+    branches: 
+    - main
   pull_request:
-    branches: [ main ]
+
 
 
 jobs:
